--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -6,21 +6,52 @@
  *@
 @this(webJarsUtil: org.webjars.play.WebJarsUtil)
 @(title: String)(content: Html)(implicit req: play.api.mvc.RequestHeader)
-
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        @* Here's where we render the page title `String`. *@
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")" />
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")" />
-        <link href="@webJarsUtil.locate("bootstrap.min.css").css()" rel="stylesheet" />
-        <script src="@webJarsUtil.locate("bootstrap.min.js").script()" type="text/javascript"></script>
-    </head>
-    <body>
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
-        @content
-      <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
-    </body>
+<html>
+<head>
+  <title>Tone Game</title>
+  @webJarsUtil.locate("jquery.min.js").script()
+  <!-- script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script -->
+  @webJarsUtil.locate("bootstrap.min.css").css()
+  @webJarsUtil.locate("bootstrap.min.js").script()
+  <link rel="shortcut icon" type="image/png"
+	href="@routes.Assets.versioned("images/favicon.png")">
+  @scalajs.html.scripts(
+    "client",
+    routes.Assets.versioned(_).toString,
+    name => getClass.getResource(s"/public/$name") != null
+  )
+  <style type="text/css">
+    #content {
+      text-align: center;
+    }
+    #player {
+      margin-top: 1em;
+      margin: 0.2em;
+    }
+    #answers .btn {
+      margin: 0.25em;
+    }
+  </style>
+</head>
+<body>
+  <header class="page-header">
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <a href="#" class="navbar-brand"></a>
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">The Tone Game</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/about" id="">About Us</a>
+        </li>
+      </ul>
+    </div>
+  </header>
+  <div id="content">
+    @content
+  </div>
+</body>
 </html>
